update build and workflows